2007-12-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videoparse/gstvideoparse.c: (gst_video_parse_sink_event):
	  Add YV12 to the pad templates as it is supported too and allow
	  -1 as stop position for NEWSEGMENT events.

2007-12-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videoparse/Makefile.am:
	  Add $(GST_PLUGINS_BASE_CFLAGS) to CFLAGS to fix the build.

	* gst/videoparse/gstvideoparse.c: (gst_video_parse_init),
	  (gst_video_parse_set_property), (gst_video_parse_get_property):
	  Use g_value_[sg]et_enum() for enum properties, g_value_[sg]et_int()
	  gives a g_critical().

2007-12-12  David Schleef  <ds@schleef.org>

	* gst/videoparse/README:
	* gst/videoparse/gstvideoparse.c:
	  Add a bunch of features: handle format specification, handle
	  queries and conversion.  Works much like a normal parser now.

2007-12-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpptdemux.c: (gst_rtp_pt_demux_finalize),
	(gst_rtp_pt_demux_setup), (gst_rtp_pt_demux_release),
	(gst_rtp_pt_demux_change_state):
	* gst/rtpmanager/gstrtpssrcdemux.c: (gst_rtp_ssrc_demux_reset),
	(gst_rtp_ssrc_demux_dispose), (gst_rtp_ssrc_demux_src_query),
	(gst_rtp_ssrc_demux_change_state):
	Clean up the dynamic pads when going to READY.

2007-12-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_finalize),
	(gst_rtp_bin_set_sdes_string), (gst_rtp_bin_get_sdes_string),
	(gst_rtp_bin_handle_message):
	* gst/rtpmanager/rtpsession.c: (rtp_session_finalize),
	(rtp_session_send_bye):
	* gst/rtpmanager/rtpsource.c: (rtp_source_finalize):
	Fix some leaks.

2007-12-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/dts/gstdtsdec.c: (gst_dtsdec_init),
	  (gst_dtsdec_sink_setcaps), (gst_dtsdec_chain_raw),
	  (gst_dtsdec_chain):
	* ext/dts/gstdtsdec.h:
	  Add support for "audio/x-private1-dts" as used by flupsparse. Most
	  changes adapted from a52dec.

2007-12-11  David Schleef  <ds@schleef.org>
